JPUI-7 | Fixed Dashboard Card Footer Alignment

--- a/src/styles/sass/components/layout/card/DashboardCard.module.scss
+++ b/src/styles/sass/components/layout/card/DashboardCard.module.scss
@@ -19,6 +19,5 @@
   position: absolute;
   width: 100%;
   bottom: 0;
-  margin-left: -15px;
   padding-bottom: 8px;
 }
